--- a/less/navbar.less
+++ b/less/navbar.less
@@ -165,7 +165,7 @@
   }
 
   @media screen and (min-width: 320px) {
-    height: 230px;
+    height: 180px;
     line-height: 180px;
     #ecologo {
       width: 100px;
